# neurforge

./: .env.example  .gitignore  CLAUDE.md  Makefile  PRODUCT_DIRECTION.md  README.md  README_JA.md  README_ZHTW.md  SPEC_v0.1.0.md  mkdocs.yml  pyproject.toml
.cursor/rules/: neurforge-namespace.mdc
.github/workflows/: publish.yml
configs/tools/: case_detective.yaml  industrial_qa.yaml  sensor_sage.yaml
docker/: .env.docker.example  Dockerfile  README.md
docs/: NEURFORGE_PRODUCT_OVERVIEW.md  NEURFORGE_namespace_migration_cursor.md  NEURFORGE_refactor_nforge.md  auto_generation.md  docker.md  environment_variables.md  examples.md  faq.md  frontend.md  index.md  practice.md  quickstart.md  quickstart_beginner.md
docs/configs/: agent_simple.yaml  toolkit_builtin.yaml  toolkit_mcp.yaml
docs/howto/: config.md  eval.md
docs/pgm-docs/: agent_trials.zh-TW.md  data_analysis_troubleshooting.zh-TW.md  repo_architecture_overview.zh-TW.md
frontend/webui/: .gitignore  MANIFEST.in  README.md  build.sh  index.html  package-lock.json  package.json  pyproject.toml
frontend/webui/src/: App.tsx  index.css
frontend/webui/src/components/: AgentTOC.tsx  ChatInput.tsx  MessageComponent.tsx  SideBar.css  SideBar.tsx
frontend/webui/src/i18n/: i18n.ts
frontend/webui/src/i18n/locales/en/: common.json
frontend/webui/src/i18n/locales/zh/: common.json
frontend/webui/src/i18n/locales/zh-TW/: common.json
frontend/webui/src/types/: events.ts  message.ts
memory/: project_agents.md
neurforge/: __init__.py
scripts/: cli_chat.py  try_agent.py
utu/: __init__.py
(+102 files in other folders)
