[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurforge_agent_ui"
version = "0.3.0"
description = "UI webpages for NeurForge"
authors = [{name = "lichaochen", email = "lichaochen@tencent.com"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "build>=1.1.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
